syntax = "proto3";

package skyrosgrpc;

import "general.proto";

import "google/api/annotations.proto";

option go_package = "./skyrosgrpc";

message UserFilter {
  repeated string user_ids = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string address = 4;
  string type = 5;
}

message UsersResponse {
  Status status = 1;
  map<string,User> users = 2;
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
}

message UserLoginResponse {
  string access_token = 1;
}

service UserService {
  rpc GetUsers(UserFilter) returns (UsersResponse) {}
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {
    option (google.api.http) = {
      post: "/login"
    };
  }
}
